--- a/gb/21/10/22/n13322503.md
+++ b/gb/21/10/22/n13322503.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kbsjgy349/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kbsjgy349/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kbsjgy349/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kbsjgy349/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kbsjgy349/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kbsjgy349/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>传承赛德克织布 专书发表暨传习成果展开幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13322507-523519-600x400.jpg" />
 <h6>赛德克族传统织布工艺原乡传习计划成果展开幕式。（南投县政府提供）
 </h6>
 <hr>
-<p>【大纪元2021年10月22日讯】（大纪元记者林萌骞台湾南投报导）为了让更多民众了解<ahref="https://github.com/kbsjgy349/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a><ahref="https://github.com/kbsjgy349/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E5%B7%A5%E8%89%BA.md#1">织布工艺</a>，南投县政府文化局除了编纂“三代织女─一个赛德克家族的技艺与记忆”专书外，并从即日起至11月3日，在文化局文物陈列室举办赛德克族传统织布工艺原乡传习计划成果展。</p>
-<figure id="13322506" aria-describedby="caption-13322506" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13322506-523518-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13322506-523518-450x300.jpg" alt="在文化局文物陈列室举办的赛德克族传统织布工艺原乡传习计划成果展。" width="500" /></a><figcaption id="caption-13322506" class="wp-caption-text">在文化局文物陈列室举办的<ahref="https://github.com/kbsjgy349/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族传统<ahref="https://github.com/kbsjgy349/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E5%B7%A5%E8%89%BA.md#1">织布工艺</a>原乡传习计划成果展。（南投县政府提供）</figcaption></figure>
+<p>【大纪元2021年10月22日讯】（大纪元记者林萌骞台湾南投报导）为了让更多民众了解<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E5%B7%A5%E8%89%BA.md#1">织布工艺</a>，南投县政府文化局除了编纂“三代织女─一个赛德克家族的技艺与记忆”专书外，并从即日起至11月3日，在文化局文物陈列室举办赛德克族传统织布工艺原乡传习计划成果展。</p>
+<figure id="13322506" aria-describedby="caption-13322506" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13322506-523518-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13322506-523518-450x300.jpg" alt="在文化局文物陈列室举办的赛德克族传统织布工艺原乡传习计划成果展。" width="500" /></a><figcaption id="caption-13322506" class="wp-caption-text">在文化局文物陈列室举办的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B5%9B%E5%BE%B7%E5%85%8B.md#1">赛德克</a>族传统<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%87%E5%B8%83%E5%B7%A5%E8%89%BA.md#1">织布工艺</a>原乡传习计划成果展。（南投县政府提供）</figcaption></figure>
 <figure id="13322505" aria-describedby="caption-13322505" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/10/id13322505-523517-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/10/id13322505-523517-450x300.jpg" alt="担任开场表演的赛德克传统文化艺术团的服装，是传统织布工艺传习的成果。" width="500" /></a><figcaption id="caption-13322505" class="wp-caption-text">担任开场表演的赛德克传统文化艺术团的服装，是传统织布工艺传习的成果。（南投县政府提供）</figcaption></figure>
 <p>“三代织女─一个赛德克家族的技艺与记忆”专书发表暨传习成果展，由赛德克传统文化艺术团担任开场表演。</p>
 <p>“三代织女─一个赛德克家族的技艺与记忆”记录外婆张玉英、妈妈张贵珠以及第三代织女张凤英的赛德克族织布传承过程。</p>
 <p>张凤英说，她使用的织布机来自于外婆与母亲，从小看外婆织布进而产生兴趣。</p>
-<p>“三代织女”一书内容丰富，记录了<ahref="https://github.com/kbsjgy349/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>织布文化背景及社会变迁，也介绍织布技法、材料制作，为珍贵的文化资产留下纪录，书中结合老中青三代织女的历程，每代有不同的做法与背景，每个年代呈现与追求的目标都不同。</p>
+<p>“三代织女”一书内容丰富，记录了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%9F%E4%BD%8F%E6%B0%91.md#1">原住民</a>织布文化背景及社会变迁，也介绍织布技法、材料制作，为珍贵的文化资产留下纪录，书中结合老中青三代织女的历程，每代有不同的做法与背景，每个年代呈现与追求的目标都不同。</p>
 <p>张凤英指出，外婆的年代织布做衣服，家人才有衣服穿，妈妈年代因经济起飞，专注在制作观光地区的商品，她则是从被登录为赛德克传统织布工艺保存者后，不断进行有系统的传习课程，希望为后代织女提供创作及发展基础。</p>
 <p>为让传统表演艺术保存团体自行织作完成演出用的传统服饰，文化局媒合张凤英艺师与赛德克传统文化艺术团（传统表演艺术赛德克族祭典舞蹈歌的保存团体），在仁爱乡南丰村办理赛德克族传统织布工艺传习。</p>
 <p>县府文化也为该项传习举办“南投县赛德克族传统织布工艺原乡传习计划成果展”，展期从即日起至11月3日，展场在文化局文物陈列室。</p>
@@ -22,47 +22,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/4/6/n10282918.md#1">这位赛德克阿嬷手里的编织 沉淀有耆老智慧 有趣更惊艳</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/19/8/17/n11459434.md#1">赛德克族传统婚礼   让更多人了解原住民族文化</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/20/9/9/n12391861.md#1">屏县文资保存亮眼 民谣传艺师陈英荣获人间国宝</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/20/12/10/n12610180.md#1">拼出原民好生活 创意辅导成果丰硕</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/21/8/23/n13181579.md#1">传承赛德克织布文化 张凤英获人间国宝殊荣</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/21/9/25/n13259284.md#1">赛德克编织之美 台中原住民文化馆展出</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/23/n13666730.md#1">大叶大学校友刘姿? 录取美国百大名校研所</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/23/n13666739.md#1">员林高中繁星灿烂 孕育7名准医师</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/22/n13664515.md#1">溪高繁星闪亮 再创校史新猷</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/4/6/n10282918.md#1">这位赛德克阿嬷手里的编织 沉淀有耆老智慧 有趣更惊艳</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/17/n11459434.md#1">赛德克族传统婚礼   让更多人了解原住民族文化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/9/n12391861.md#1">屏县文资保存亮眼 民谣传艺师陈英荣获人间国宝</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/10/n12610180.md#1">拼出原民好生活 创意辅导成果丰硕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/4/26/n12906497.md#1">浪漫织缘  赛德克与排湾族的编织对话</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/8/23/n13181579.md#1">传承赛德克织布文化 张凤英获人间国宝殊荣</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/9/25/n13259284.md#1">赛德克编织之美 台中原住民文化馆展出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688297.md#1">彰化马兴国小“AI积木教室”启用 儿童寓教于乐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688293.md#1">万兴国中食农教育 明道大学飨以南洋口味</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685583.md#1">台日动漫大赛各领风骚 大叶大学、大明高中联展</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/28/n10813474.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9109957.md#1" target="_blank">永远的传奇—从长春到世界（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9926680.md#1" target="_blank">文武：鲁迅在中共破坏中国传统文化中的作用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/6/17/n3289382.md#1" target="_blank">探寻真相 兼听则明 ——法轮功小问答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/9/n13632327.md#1">【百年真相】逆行的红二代 林立果“讨毛檄文”</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/17/n13653509.md#1">【未解之谜】用数学公式证明神的存在</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/15/n13646805.md#1">为何说“春分”一刻值千金？</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/10/n13635781.md#1">【人生之钥】状元冯京 两娶宰相女三魁天下元</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/22/n13664873.md#1">【拍案惊奇】东航垂直坠机不寻常 习下令彻查</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/22/n13665610.md#1">【舞剧】观画入境</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13663299.md#1">【方菲访谈】程晓农：俄乌战争两大背后因素</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13661915.md#1">东航载132人客机坠毁引发山火 伤亡不明</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13662605.md#1">东航坠机旅客名单已出 家属抵机场：非常悲痛</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13663222.md#1">【秦鹏直播】东航坠机4大离奇 人为还是故障？</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13663163.md#1">憔悴落魄剧照引热议 范冰冰晒近照回应</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/20/n13660370.md#1">曾志伟承认TVB逾500人确诊 拟实行封闭管理</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13663320.md#1">张学友时隔6年重返影坛 妻子严重洁癖引话题</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13663044.md#1">贝克汉姆借IG账号给乌国医生 记录战火下惨况</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/21/n13661460.md#1">Red Velvet盼成为春季女王 曝今年有许多新作</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/18/n13656045.md#1">豆制品抗癌还是致癌？大豆误区一定要知道</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/14/n13645679.md#1">十大快乐食物 吃对了还滋养肠道好菌</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/20/n13659347.md#1">【美食天堂】照烧鸡腿做法～黄金比例照烧酱汁！</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/19/n13658365.md#1">喝水不足可致血栓、慢性病？很多人补水方法不对</a></li>
-<li><a href="https://github.com/kbsjgy349/djy/blob/master/gb/22/3/22/n13664943.md#1">【健康1+1】《自然》：Omicron出现是意外 下个变种更危险？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kbsjgy349/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kbsjgy349/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/22/n13322503.htm">传承赛德克织布 专书发表暨传习成果展开幕</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/22/n13322503.htm">传承赛德克织布 专书发表暨传习成果展开幕</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kbsjgy349/djy/blob/master/gb/21/10/22/n13322503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kbsjgy349/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kbsjgy349/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kbsjgy349/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kbsjgy349/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kbsjgy349/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/10/22/n13322503.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
